--- a/index.html
+++ b/index.html
@@ -181,28 +181,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
-                                <br>
-                                The superb interior of one of our cottages
-                            </div><!-- end_left-col -->
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul>
-                                <!--end of menu list-->
-                            </nav>
-                                <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
-                            </div>
-                            <div class="data" id="html5style2leftcol">
-                                <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
@@ -218,7 +197,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                             </div>                       
                             <div class="col-3">
                                 <img class="circle" src="img/orange-globe.png">
@@ -233,26 +212,25 @@
                     <div class="col-10">
                         <h2>We're flying around the globe</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg"
-                                width="300">
-                            <br>
-                            The superb interior of one of our cottages
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229" width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
 
                         <div class="col-3">
                             <img id="waves" class="circle" src="images/waves.png">
@@ -268,27 +246,25 @@
                     <div class="col-9">
                         <h2>Above the clouds &amp; over the sea.</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-9.jpg" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
 
                         <div class="col-3">
                             <img id="plane" class="circle" src="images/plane.png">
@@ -300,27 +276,25 @@
                     <div class="col-8">
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                            </div>
                         <div class="col-3">
                             <img id="paper-blue" class="circle" src="images/paper-blue.png">
                         </div><!-- end col-3 -->
@@ -330,6 +304,27 @@
                 <div class="row" style="background-color: #00afe1;">
                     <div class="col-7">
                         <h2>So come along for the ride!</h2>
+                        <div class="data" id="html5style2leftcol">
+                            <h3>Cottages, converted barns, caravans</h3>
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                            <br>
+                            The superb interior of one of our cottages
+                        </div><!-- end_left-col -->
+                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                            <ul><!--start of menu list-->
+                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                            </ul><!--end of menu list-->
+                        </nav>
+                        <!--</div> removed and replaced with </nav>-->
+                        <div class="data" id="html5style2midcol">
+                            <h3>Situated in the BDA's beautiful countryside</h3>
+                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                        </div>
+                        <!--
                         <h3>Around town last night</h3>
                         <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
@@ -346,6 +341,7 @@
                                 <li><img alt="Mo' Fat" src="./images/mofat_400.jpg" /></li>
                             </ul>
                         </div>
+                    -->
                         <div class="col-3">
                             <img id="globe" class="circle" src="images/globe.png" width="215px">
                         </div>
