--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
     <link rel="stylesheet" href="style[1].css"> 
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="./nav[1].css">
+	
+	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/corporate-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/creative-style.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/headers.css">
+	
+	<link rel="stylesheet" type="text/css" href="./CSS/css/index-973f48a9b2be581a2212ac40e3992258a3d10ae46dc49036c6a35.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
+	
+	<link rel="stylesheet" type="text/css" href="./CSS/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/headers.css">
+	
+
+	
 
     <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
