--- a/index.html
+++ b/index.html
@@ -31,14 +31,25 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/creative-style.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/headers.css">
-	
 	<link rel="stylesheet" type="text/css" href="./CSS/css/index-973f48a9b2be581a2212ac40e3992258a3d10ae46dc49036c6a35.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	
-	<link rel="stylesheet" type="text/css" href="./CSS/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css/headers.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/base.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/bullets.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/colorbox.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/creative.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/creative.min.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-4sides.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-whitebdr.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image2.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-para-shadow.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs-ie.css">
+	
+	
 	
 
 	
