--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css/base.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css/bullets.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/colorbox.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/creative.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/creative.min.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-4sides.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-whitebdr.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-image2.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-para-shadow.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs-ie.css">
+
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/css3-text-shadow.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/equal-2d.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/error.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/feedback.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css"> 
 	
 	<link rel="stylesheet" type="text/css" href="./CSS/css/base.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/bullets.css">
