--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-image2.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-para-shadow.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs-ie.css">
-
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css3-text-shadow.css">
@@ -59,18 +58,18 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/fixed.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css"> 
 	
-	<link rel="stylesheet" type="text/css" href="./CSS/css/base.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css/bullets.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
-	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/colorbox.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/creative.css"> 
-	<link rel="stylesheet" type="text/css" href="./CSS/creative.min.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-4sides.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css3-image-whitebdr.css"> 
-	<link rel="stylesheet" type="text/css" href="./CSS/css3-image2.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css3-para-shadow.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css3-tabs-ie.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gallery-one-col.css"> 
+	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-html5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
 	
 	
 	
