--- a/about.html
+++ b/about.html
@@ -705,7 +705,7 @@
 
                                         <!-- <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-11.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
 
@@ -722,7 +722,7 @@
                             <!--</div> removed and replaced with </nav>--
                             <div class="data" id="html5-ch1-7midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/./bda-12.jpg" height="229" width="398">
                             </div> -->
                                     </div><!-- end col-11 -->
                                 </div> <!-- end class row -->
@@ -1002,7 +1002,7 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-13.jpg"
                                     width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
@@ -1019,7 +1019,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229"
                                     width="398">
                             </div>
                         </div><!-- end-col-12 -->
