--- a/about.html
+++ b/about.html
@@ -1019,7 +1019,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-14.jpg" height="229"
                                     width="398">
                             </div>
                         </div><!-- end-col-12 -->
@@ -1038,7 +1038,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-15.jpg"
                                     width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
@@ -1055,7 +1055,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-16.jpg" height="229"
                                     width="398">
                             </div>
                         </div><!-- end-col-12 -->
@@ -1084,7 +1084,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-17.jpg" height="229" width="398">
                             </div>
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
@@ -1094,7 +1094,7 @@
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-18.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1111,7 +1111,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-19.jpg" height="229"
                                 width="398">
                         </div>
                         <div class="col-3">
@@ -1128,7 +1128,7 @@
                         <h2>We're flying around the globe</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-20.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1143,9 +1143,9 @@
                                 </ul><!--end of menu list-->
                         </nav>
                         <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
+                        <div class="data" id="html5style2midcol">./bda-14.jpg
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-21.jpg" height="229"
                                 width="398">
                         </div>
 
@@ -1164,7 +1164,7 @@
                         <h2>Above the clouds &amp; over the sea.</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-22.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
