--- a/about.html
+++ b/about.html
@@ -122,22 +122,17 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
@@ -161,30 +156,26 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-1.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
-                    </div> <!-- end class row -->
+                    </div><!-- end-.row -->
                     <br class="clear">
 
                     <div class="row" style="background-color: #F6931E;">
